Fix crash when removing items from MapboxGL maps

Triggered by usage of a virtual method in superclass destructor.

Change-Id: If99e523e42fd13686ae43c0083a74e1b68221fc7
Fixes: QTBUG-67638
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>