src/location/declarativemaps/qdeclarativecirclemapitem.cpp
@@ -327,6 +327,7 @@ QDeclarativeCircleMapItem::QDeclarativeCircleMapItem(QQuickItem *parent)
 :   QDeclarativeGeoMapItemBase(parent), border_(this), color_(Qt::transparent), dirtyMaterial_(true),
     updatingGeometry_(false)
 {
+    m_itemType = QGeoMap::MapCircle;
     setFlag(ItemHasContents, true);
     QObject::connect(&border_, SIGNAL(colorChanged(QColor)),
                      this, SLOT(markSourceDirtyAndUpdate()));
@@ -622,11 +623,6 @@ void QDeclarativeCircleMapItem::setGeoShape(const QGeoShape &shape)
         emit centerChanged(circle_.center());
     if (radiusHasChanged)
         emit radiusChanged(circle_.radius());
-}
-
-QGeoMap::ItemType QDeclarativeCircleMapItem::itemType() const
-{
-    return QGeoMap::MapCircle;
 }
 
 /*!
