src/location/declarativemaps/qdeclarativecirclemapitem_p.h
@@ -95,7 +95,6 @@ public:
     bool contains(const QPointF &point) const override;
     const QGeoShape &geoShape() const override;
     void setGeoShape(const QGeoShape &shape) override;
-    QGeoMap::ItemType itemType() const override;
 
     static bool crossEarthPole(const QGeoCoordinate &center, qreal distance);
     static void calculatePeripheralPoints(QList<QGeoCoordinate> &path, const QGeoCoordinate &center,
